--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,10 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 // https://mvnrepository.com/artifact/org.postgresql/postgresql
 	compile group: 'org.postgresql', name: 'postgresql', version: '42.1.1'
-	
+	// https://mvnrepository.com/artifact/org.modelmapper/modelmapper
+	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.2'
+
+
 
 //	testCompile('org.springframework.security:spring-security-test')
 }
