--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ repositories {
 
 
 dependencies {
+//	compile group: 'org.springframework', name:  'gs-validating-form-input', version: '0.1.0'
+	// https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator
+	compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.16.Final'
+	// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
