--- a/build.gradle
+++ b/build.gradle
@@ -38,10 +38,10 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-// https://mvnrepository.com/artifact/org.postgresql/postgresql
 	compile group: 'org.postgresql', name: 'postgresql', version: '42.1.1'
-	// https://mvnrepository.com/artifact/org.modelmapper/modelmapper
 	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.2'
+	compile 'org.webjars:bootstrap:4.3.1'
+	compile 'org.webjars:jquery:3.4.0'
 
 
 
