Adding SLF4J for logs. Closes #15

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=postgres
 spring.datasource.password=tomcat
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+logging.level.org.springframework.web=ERROR
+logging.level.com.mkyong=DEBUG
