--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,8 @@ repositories {
 
 
 dependencies {
-//	compile group: 'org.springframework', name:  'gs-validating-form-input', version: '0.1.0'
-	// https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator
+
 	compile group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.0.16.Final'
-	// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
 	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
@@ -43,6 +41,8 @@ dependencies {
 	compile 'org.webjars:bootstrap:4.3.1'
 	compile 'org.webjars:jquery:3.4.0'
 
+// https://mvnrepository.com/artifact/org.spockframework/spock-core
+	testCompile group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.4'
 
 
 //	testCompile('org.springframework.security:spring-security-test')
