--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,6 @@ dependencies {
 	compile 'org.webjars:bootstrap:4.3.1'
 	compile 'org.webjars:jquery:3.4.0'
 
-// https://mvnrepository.com/artifact/org.spockframework/spock-core
-	testCompile group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.4'
 
-
-//	testCompile('org.springframework.security:spring-security-test')
+	testCompile('org.springframework.security:spring-security-test')
 }
