Securing database connection. Bg image refactoring. Closes #8

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/Forum
-spring.datasource.username=postgres
-spring.datasource.password=tomcat
+#spring.datasource.username=ENVIRMENT_PROPERTY
+#spring.datasource.password=ENVIRMENT_PROPERTY
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 logging.level.org.springframework.web=ERROR
-logging.level.com.mkyong=DEBUG
